add patch to fix error produced by API vs outdated Account Model
