# spec/services/orderhistoryv1/oas3.patched/openapi.yaml
@@ -520,20 +520,20 @@
       "title": "Account",
       "type": "object",
       "properties": {
-        "number": {
+        "accountNumber": {
           "type": "string",
           "description": "Account Number",
           "example": 136008
         },
-        "name": {
+        "accountName": {
           "type": "string",
           "description": "Name of Account",
           "example": "Service Corporation"
         }
       },
       "required": [
-        "number",
-        "name"
+        "accountNumber",
+        "accountName"
       ]
     },
     "ibx-detail-for-locations-endpoint": {
